🛴 fix: swag docs
