# docs/swagger.json
@@ -28,7 +28,7 @@
                 "tags": [
                     "posts"
                 ],
-                "summary": "Create",
+                "summary": "CreatePost",
                 "operationId": "create-post",
                 "parameters": [
                     {
@@ -69,8 +69,8 @@
                 }
             }
         },
-        "/api/posts/users/{userId}": {
-            "patch": {
+        "/api/posts/user/{userId}": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -136,13 +136,13 @@
                 "tags": [
                     "posts"
                 ],
-                "summary": "Get",
+                "summary": "GetPost",
                 "operationId": "get-post",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "post id",
-                        "name": "id",
+                        "name": "postId",
                         "in": "path",
                         "required": true
                     }
@@ -152,63 +152,6 @@
                         "description": "post info",
                         "schema": {
                             "$ref": "#/definitions/domain.Post"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Update post body",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "posts"
-                ],
-                "summary": "Update",
-                "operationId": "update-post",
-                "parameters": [
-                    {
-                        "description": "new post data",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.PostUpdateInput"
-                        }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "post id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "$ref": "#/definitions/handler.statusResponse"
                         }
                     },
                     "400": {
@@ -246,7 +189,7 @@
                     {
                         "type": "integer",
                         "description": "post id",
-                        "name": "id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -256,6 +199,63 @@
                         "description": "ok",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update post body",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "UpdatePost",
+                "operationId": "update-post",
+                "parameters": [
+                    {
+                        "description": "new post data",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.PostUpdateInput"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "post id",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/handler.statusResponse"
                         }
                     },
                     "400": {
